--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,5 @@ AWS_BUCKET_NAME=
 AWS_BUCKET_REGION=
 AWS_BUCKET_ACCESS_KEY_ID=
 AWS_BUCKET_SECRET_ACCESS_KEY=
+REDIS_HOST=localhost
+REDIS_POST=6379
