--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "aloha-feed",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "src/server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +14,7 @@
     "@aws-sdk/client-s3": "^3.405.0",
     "@aws-sdk/s3-request-presigner": "^3.405.0",
     "bcrypt": "^5.0.0",
+    "bull": "^4.11.3",
     "concurrently": "^6.0.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
@@ -25,7 +26,8 @@
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
     "peer": "^0.6.1",
-    "socket.io": "^3.1.2"
+    "socket.io": "^3.1.2",
+    "winston": "^3.10.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
