feat: store socket users to redis

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bcrypt": "^5.0.0",
     "bull": "^4.11.3",
     "concurrently": "^6.0.0",
+    "connect-redis": "^7.1.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
