--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,13 @@
-MONGODB_URL=mongodb://localhost:27017
+MONGO_HOST=mongo
+MONGO_PORT=27017
+MONGO_DATABASE=aloha-dev
 ACCESS_TOKEN_SECRET=ACCESS_TOKEN_SECRET
 REFRESH_TOKEN_SECRET=REFRESH_TOKEN_SECRET
 AWS_BUCKET_NAME=
 AWS_BUCKET_REGION=
 AWS_BUCKET_ACCESS_KEY_ID=
 AWS_BUCKET_SECRET_ACCESS_KEY=
+CORS_DOMAIN='http://localhost:3000'
 REDIS_HOST=localhost
 REDIS_POST=6379
 LOG_LEVEL=debug
