--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.3",
+    "http-status-codes": "^2.2.0",
     "ioredis": "^5.3.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.13",
