fix: adjust s3 config

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,7 @@ AWS_BUCKET_NAME=
 AWS_BUCKET_REGION=
 AWS_BUCKET_ACCESS_KEY_ID=
 AWS_BUCKET_SECRET_ACCESS_KEY=
+AWS_BUCKET_SESSION_TOKEN=
 CORS_DOMAIN='http://localhost:3000'
 REDIS_HOST=localhost
 REDIS_POST=6379
