--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,9 @@ MONGO_HOST=localhost
 MONGO_PORT=27017
 MONGO_DATABASE=aloha-dev
 ACCESS_TOKEN_SECRET=ACCESS_TOKEN_SECRET
+ACCESS_TOKEN_LIFETIME=1d
 REFRESH_TOKEN_SECRET=REFRESH_TOKEN_SECRET
+REFRESH_TOKEN_LIFETIME=7d
 AWS_BUCKET_NAME=
 AWS_BUCKET_REGION=
 AWS_BUCKET_ACCESS_KEY_ID=
