feat: media module

--- a/.env.example
+++ b/.env.example
@@ -18,10 +18,11 @@ NEO4J_SCHEME=bolt
 AWS_COGNITO_USER_POOL_ID=
 AWS_COGNITO_CLIENT_ID=
 AWS_REGION=
+AWS_BUCKET_NAME=
+AWS_ACCESS_KEY=
+AWS_SECRET_ACCESS_KEY=
 
 GATEWAY_TOKEN_SECRET=GATEWAY_TOKEN_SECRET
 GATEWAY_TOKEN_EXPIRATION_TIME=36000
 
 RABBIT_MQ_URI=
-
-USER_SERVICE_URL=http://localhost:5002
