--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "axios": "^1.7.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "ioredis": "^5.4.1",
     "jwks-rsa": "^3.1.0",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
