--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "@nestjs/mongoose": "^10.0.10",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.3.10",
+    "@nestjs/platform-socket.io": "^10.4.1",
     "@nestjs/swagger": "^7.4.0",
+    "@nestjs/websockets": "^10.4.1",
     "amazon-cognito-identity-js": "^6.3.12",
     "amqp-connection-manager": "^4.1.14",
     "amqplib": "^0.10.4",
@@ -55,6 +57,7 @@
     "reflect-metadata": "^0.2.2",
     "rimraf": "^6.0.1",
     "rxjs": "^7.8.1",
+    "socket.io": "^4.7.5",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
